{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "bf266c37-3a7c-4578-95b9-f59917dfe09f",
            "actions": [
                {
                    "name": "APress",
                    "type": "Button",
                    "id": "b6db7f0e-a4a3-492d-94c1-7e0e8e343d85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BPress",
                    "type": "Button",
                    "id": "db6a507a-6119-4cb4-b30c-827f54cc1177",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "ecb18dab-cc9d-4274-ad3a-25337954b435",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af59e108-0297-4e84-9cdb-a26ec6be1a19",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "APress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b6b64e0-d386-4a8d-9b5e-3b88d678dce5",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dir",
                    "id": "4e6cb025-7d9f-414f-9702-5722aacb76a5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "924be435-c58c-4ab9-a001-053571a25040",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "266f7766-f4a1-4b5e-8c54-c96acceb0c13",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7aafb97d-8ded-4f17-8dd8-acde7c4e3ae8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e62d2a2d-21c0-4bd8-b3d4-8b4befadaf33",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Editor",
            "id": "86e8d632-9d44-4ad2-8002-2cff07995d37",
            "actions": [
                {
                    "name": "PressRight",
                    "type": "Button",
                    "id": "774265e7-032c-4761-aaf7-82bb10ec74e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRight",
                    "type": "Button",
                    "id": "3df9799e-325e-4a5e-bf10-4490cfd40d16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "556dfb92-15d8-480e-8da9-a43179a78313",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b74a2c12-1c28-4d30-9e2c-ea40c73a1674",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bff3a29-3a46-4c88-961f-07b2c491f631",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eea8c59d-69e7-4652-aaeb-19d2cf0e2d06",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": []
        }
    ]
}